examples/test/testpolicy8681.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8681
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key24: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value29
      podSelector:
        matchLabels:
          key45: value33
          key42: value47
          key20: value29
